<resources>
    <string name="a_minute_ago">a minute ago</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_bazaar_title">About Bazaar</string>
    <string name="about_the_app">About the application</string>
    <string name="about_this_app">About this App</string>
    <string name="accept_postpaid_terms">Accept</string>
    <string name="access_install_data_files_description">To fully install this app, we need to install data files.</string>
    <string name="access_obb_permission">Data File Access Permission</string>
    <string name="access_storage_directory_description">For installing data files, Bazaar needs to access your storage directory.</string>
    <string name="account">Account</string>
    <string name="account_status">Account status</string>
    <string name="action_reply_placeholder">Reply to %s</string>
    <string name="activate_badges">Activate badges!</string>
    <string name="activation_description_1">"Earn points with every purchase of Bazaar's games and apps in the Loyalty club. At special events, take advantage of special offers and increase your score. Turn your points into a discount code and in-app products and other prizes available at the Loyalty Club."</string>
    <string name="activation_description_2">"You earn points by purchasing games and apps that use Bazaar's payment service. In special events, you can earn up to 5 times more points from selected games and apps."</string>
    <string name="activation_description_3">Turn your points into discount codes and in-app products like special characters, coins and diamonds. You can also use your points to buy tickets to lotteries held on special occasions. Expect more diverse prizes in Bazaar.</string>
    <string name="activation_description_4">There are 4 levels in the Loyalty Club. By collecting more points, you go to a higher level, which makes you get more points for each purchase. Once you reach a level, you will maintain that level this year and next.</string>
    <string name="activation_successfully">Activation successfully.</string>
    <string name="active_cancel_by_developer_subscription">"This subscription can't be renewed."</string>
    <string name="active_devices">Active Devices</string>
    <string name="active_direct_debit">Activate direct debit</string>
    <string name="active_filter_title">Active</string>
    <string name="active_no_renewable_subscription">You have canceled auto-renew.</string>
    <string name="active_renewable_subscription">Auto-renew date: %s</string>
    <string name="activity_not_resolved_message">"There isn't any application on your device for doing this operation."</string>
    <string name="ad">ad</string>
    <string name="ad_advertiser">Advertiser</string>
    <string name="ad_back">Back</string>
    <string name="ad_count_format">%1$d of %2$d ads</string>
    <string name="ad_countdown_seconds">%d seconds</string>
    <string name="ad_label">AD</string>
    <string name="ad_skip">Skip</string>
    <string name="ad_volume">Volume</string>
    <string name="add_comment">Add comment</string>
    <string name="add_reply">Add a reply</string>
    <string name="agc_039385256A8E064A3FBA0E5DC382B8F03961789D7A12A9D0BB248FFEDD6D1470">00549ACE0CA31A5C947AB057118ED2FB94E971C2CAFFAA700118FB9C6472632CF3D6B71BF18EDD8D10EA399B3A3B302C648BDEBA79DB7B84DA565401B29709B0AA96122DD098D7394A5B3F98994E3DD707</string>
    <string name="agc_109B7B0344C0EDE50A1F3332C0015C78281E801719F522B4F20FDF815A5BCC3F">00EF6AC247F928116E266BC92EAEE7A226C1EE6AE677E8BD9BF9050075EDC9930A174DE1D640AB2E09BED7758F9662A749BFFD5D7CE75E8A8930C75E071E37589ACEDAA811747579BBFFB8C526AF7A153EEE1F090E4A9AA818A94F203B2F254494</string>
    <string name="agc_1F79ACBA9BD8A7666759524C3052C88689CBB5873811854517CBBE65DC268EAA">8719A13DEA270E4B8C5C829417DF600E</string>
    <string name="agc_2CF9BE2236D08368B0649449A8546AA52B2038D467F630312C146F9EA821AC2E">00FC5C5FFD8B34350F8553284CBA536068A2D65FED59887416BF1C3DE5AAC01475</string>
    <string name="agc_3C5E7223FA10AEB1FFA081C86F85F3C23A0526877FBC6A3A77C4D36A7BA9AAB3">008F43CEE55C4B5DB98DA9C0977C74C53821A1397E2CB09980247A0C0C560B4B323B3EA34EDC2C2CF2F7FB14150DFE9777</string>
    <string name="agc_3D7A0A63AA0374539D58FF4B3034CF00D2353E3A780A0F85C35566E329358934">00295DED7062367C75B0F07C6E945369284590D42BE1A12342CFDF9B1A26B08361175B565D861DF8F79E3374F138A14EBEF1D97F5916713DAE402E58A927BA11E4846F0007582AFC6097B499BD09BBC333DD1DF58FF8554E67731E0919E7C8EF13</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bandwidth_optimization_setting_desc">If deactivated, applications will be downloaded simultaneously which may slow down your internet.</string>
    <string name="bandwidth_optimization_setting_title">Optimized usage of bandwidth</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="copyright_title">Copyright</string>
    <string name="dark_theme">Dark mode</string>
    <string name="deeplink_alarm_permission">bazaar://alarm_permission_internal?extraData={extraData}</string>
    <string name="deeplink_app_detail_fragment">bazaar://app_detail_internal?extraData={extraData}</string>
    <string name="deeplink_app_more_description_detail_fragment">bazaar://app_more_description_detail_internal?extraData={extraData}</string>
    <string name="deeplink_app_more_description_fragment">bazaar://app_more_description_internal?extraData={extraData}</string>
    <string name="deeplink_auto_update_apps">bazaar://auto_update_apps_internal</string>
    <string name="deeplink_content_all_episodes_launcher">bazaar://content_all_episodes?extraData={extraData}</string>
    <string name="deeplink_content_detail_description_launcher">bazaar://content_detail_description?extraData={extraData}</string>
    <string name="deeplink_content_detail_internal">bazaar://content_detail_internal?extraData={extraData}</string>
    <string name="deeplink_direct_debit_bank_list_fragment">bazaar://direct_debit_bank_list_internal?extraData={extraData}</string>
    <string name="deeplink_direct_debit_info_fragment">bazaar://direct_debit_info_internal?extraData={extraData}</string>
    <string name="deeplink_direct_debit_more_info_fragment">bazaar://direct_debit_more_info_internal</string>
    <string name="deeplink_direct_debit_national_id_fragment">bazaar://direct_debit_national_id_internal?extraData={extraData}</string>
    <string name="deeplink_direct_debit_on_boarding_fragment">bazaar://direct_debit_on_boarding_internal?extraData={extraData}</string>
    <string name="deeplink_loyalty_club">bazaar://loyalty_club_internal?extraData={extraData}</string>
    <string name="deeplink_loyalty_club_history">bazaar://loyalty_club_history_internal</string>
    <string name="deeplink_loyalty_club_levels">bazaar://loyalty_club_levels_internal</string>
    <string name="deeplink_loyalty_club_more_info">bazaar://loyalty_club_more_internal</string>
    <string name="deeplink_magazine">bazaar://magazine?extraData={extraData}</string>
    <string name="deeplink_magazine_detail">bazaar://magazine_detail?extraData={extraData}</string>
    <string name="deeplink_magazine_filter">bazaar://magazine_filter?extraData={extraData}</string>
    <string name="deeplink_report_fragment">bazaar://report_internal?extraData={extraData}</string>
    <string name="deeplink_schedule_update">bazaar://schedule_update_internal</string>
    <string name="deeplink_spend_item_fragment">bazaar://spend_item_internal?extraData={extraData}</string>
    <string name="deeplink_success_spend_item_fragment">bazaar://success_spend_item_internal?extraData={extraData}</string>
    <string name="deeplink_tournament_history">bazaar://tournament_history_internal?extraData={extraData}</string>
    <string name="deeplink_tournament_leaderboard">bazaar://tournament_leaderboard_direct?extraData={extraData}</string>
    <string name="deeplink_tournament_rule">bazaar://tournament_rule_internal?extraData={extraData}</string>
    <string name="deeplink_video_player_launcher">bazaar://video_player_launcher_fragment?extraData={extraData}</string>
    <string name="error_server_connection_failure">Something went wrong</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="general">General</string>
    <string name="general_icon_content_description">Icon</string>
    <string name="gift_card_icon_content_description">Gift Card</string>
    <string name="login">Login</string>
    <string name="more_button_content_description">More</string>
    <string name="my_review_not_login">In order to see your reviews, please log into your Bazaar account.</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="one">1</string>
    <string name="other">Other</string>
    <string name="redeem_gift_card">Redeem gift card</string>
    <string name="release_notes_title">Release Notes</string>
    <string name="see_bazaar_in_system_settings">View Bazaar in system settings</string>
    <string name="setting_download_title">Download</string>
    <string name="settings_keep_backups_of_apps_summary">Installation file of apps are stored in default Download folder of the device.This may cause low storage issues on your device.</string>
    <string name="settings_keep_backups_of_apps_title">Keep backups of apps</string>
    <string name="settings_language">Language (زبان)</string>
    <string name="settings_update_notification_summary">Notify me when updates are available.</string>
    <string name="settings_update_notification_title">Updates Notification</string>
    <string name="suggest_to_friends">Suggest to friends</string>
    <string name="three">3</string>
    <string name="title_force_login">In order to see this page, please log into your Bazaar account.</string>
    <string name="try_again">Try again</string>
    <string name="two">2</string>
    <string name="update">Update</string>
    <string name="your_gift_cards">Your Gift Cards</string>
</resources>