<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView android:id="@id/addGiftCardCardView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/default_margin_double" android:elevation="@dimen/default_margin" app:cardCornerRadius="@dimen/default_margin" app:contentPadding="@dimen/default_margin">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/default_margin" android:layout_marginRight="@dimen/default_margin" android:contentDescription="@string/gift_card_icon_content_description" app:srcCompat="@drawable/ic_credit_card_40dp" />
            <TextView android:textColor="@color/text_primary" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/redeem_gift_card" android:layout_weight="1.0" style="@style/Bazaar.Text.Subtitle2" />
            <com.farsitel.bazaar.designsystem.widget.RTLImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/more_button_content_description" android:layout_marginEnd="@dimen/default_margin" app:srcCompat="@drawable/ic_chevron_right" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView android:textColor="@color/text_primary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/default_margin_double" android:layout_marginRight="@dimen/default_margin_double" android:text="@string/your_gift_cards" style="@style/Bazaar.Text.Subtitle1" />
    <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <androidx.recyclerview.widget.RecyclerView android:orientation="vertical" android:id="@id/recyclerView" android:paddingTop="@dimen/default_margin" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        <include layout="@layout/layout_page_non_data" />
    </FrameLayout>
</LinearLayout>