<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/icon" android:layout_width="@dimen/central_image_size" android:layout_height="@dimen/central_image_size" android:contentDescription="@string/general_icon_content_description" app:srcCompat="@drawable/ic_error_outline_icon_primary_24dp_old" />
    <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/text_primary" android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin_triple" android:text="@string/error_server_connection_failure" style="@style/Bazaar.Text.Body1" />
    <com.farsitel.bazaar.designsystem.component.button.BazaarButton android:id="@id/retryButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin_triple" app:buttonTheme="contained" app:buttonType="app" app:sizeMode="medium" app:text="@string/try_again" />
</merge>