<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/view_base_rate_big_with_num_0" android:background="@drawable/shape_big_rate_bar" android:paddingTop="@dimen/default_margin" android:paddingBottom="@dimen/default_margin_half" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/default_margin_half" android:paddingEnd="@dimen/default_margin_half"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.farsitel.bazaar.designsystem.ratingbar.MaterialRatingBar android:id="@id/rbPostComment" android:tag="binding_1" android:layout_width="fill_parent" android:layout_height="28.0dip" android:max="5" android:numStars="5" android:stepSize="1.0" app:emptyDrawableId="@drawable/ic_star_outline" app:fillDrawableId="@drawable/ic_star_fill" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin_half">
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/text_secondary" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/one" android:includeFontPadding="false" android:layout_weight="1.0" style="@style/Bazaar.Text.Body2" />
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/text_secondary" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/two" android:includeFontPadding="false" android:layout_weight="1.0" style="@style/Bazaar.Text.Body2" />
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/text_secondary" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/three" android:includeFontPadding="false" android:layout_weight="1.0" style="@style/Bazaar.Text.Body2" />
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/text_secondary" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/four" android:includeFontPadding="false" android:layout_weight="1.0" style="@style/Bazaar.Text.Body2" />
        <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/text_secondary" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/five" android:includeFontPadding="false" android:layout_weight="1.0" style="@style/Bazaar.Text.Body2" />
    </LinearLayout>
</LinearLayout>