<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView android:layout_width="64.0dip" android:layout_height="64.0dip" android:contentDescription="@string/general_icon_content_description" app:srcCompat="@drawable/ic_signal_wifi_off_icon_primary_24dp_old" />
    <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/text_primary" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin_triple" android:text="@string/no_internet_connection" android:layout_marginStart="@dimen/default_margin_double_half" android:layout_marginEnd="@dimen/default_margin_double_half" style="@style/Bazaar.Text.Body1" />
    <com.farsitel.bazaar.designsystem.component.button.BazaarButton android:textColor="@color/tc_primary_button_white" android:id="@id/retryButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin_triple" app:buttonTheme="contained" app:buttonType="app" app:sizeMode="medium" app:text="@string/try_again" />
</merge>