<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView android:layout_width="56.0dip" android:layout_height="56.0dip" android:contentDescription="@string/general_icon_content_description" app:srcCompat="@drawable/ic_user_account_icon_secondary_24dp_old" style="@style/Bazaar.Image.Toolbar" />
    <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/text_primary" android:gravity="center" android:id="@id/forceLoginViewTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin_double" android:text="@string/my_review_not_login" android:layout_marginStart="@dimen/default_margin_double" android:layout_marginEnd="@dimen/default_margin_double" style="@style/Bazaar.Text.Body1" />
    <com.farsitel.bazaar.designsystem.component.button.BazaarButton android:id="@id/loginButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_margin_double" android:minWidth="185.0dip" android:minHeight="48.0dip" app:buttonTheme="contained" app:buttonType="app" app:text="@string/login" />
</LinearLayout>